@@ -19,6 +19,7 @@
 ****************************************************************************/
 
 #include "playhead.h"
+#include "timeline.h"
 #include <QStyle>
 #include <QPainter>
 #include <QTest>
@@ -29,6 +30,7 @@ PlayHead::PlayHead()
     m_pressed = false;
     m_value = 0;
     m_horizontalScrollPos = 0;
+    setMinimumHeight(35);
 }
 
 void PlayHead::paintEvent(QPaintEvent *)
@@ -39,20 +41,29 @@ void PlayHead::paintEvent(QPaintEvent *)
     int offset = m_horizontalScrollPos * 20;
 
     QPainter painter(this);
-
+    QFont font = painter.font();
+    font.setPixelSize(10);
+    painter.setFont(font);
     painter.setPen(Qt::white);
+    QFontMetrics fm = painter.fontMetrics();
     for(int i = 0 - offset; i < width; i+=20)
     {
-        painter.drawLine(i, 0, i, 3);
+        painter.drawLine(i, 12, i, 13);
     }
     for(int i = 0 - offset; i < width; i+=100)
     {
-        painter.drawLine(i, 0, i, 8);
+        painter.drawLine(i, 12, i, 20);
+        if(i > 0)
+        {
+            QString posString = timeString((i + offset) * 5, false);
+            int width = fm.width(posString);
+            painter.drawText(i - width / 2, 0, width, fm.height(), 0, posString);
+        }
     }
     painter.setPen(QColor(41, 41, 41));
-    painter.fillRect(0, 10, width, height, gray);
-    painter.drawRect(0, 10, width - 1, height - 1);
-    painter.drawImage(m_value / 5 - 4 - offset, 4, m_image);
+    painter.fillRect(0, 22, width, height, gray);
+    painter.drawRect(0, 22, width - 1, height - 1);
+    painter.drawImage(m_value / 5 - 4 - offset, 17, m_image);
 }
 
 void PlayHead::scrollValueChanged(int pos)
@@ -63,8 +74,23 @@ void PlayHead::scrollValueChanged(int pos)
 
 void PlayHead::mousePressEvent(QMouseEvent *event)
 {
-    if(event->button() == Qt::LeftButton && event->x() + m_horizontalScrollPos * 20 > m_value / 5 - 4 && event->x() + m_horizontalScrollPos * 20 <= m_value / 5 + 5)
+    if(event->button() != Qt::LeftButton)
+        return;
+    if(event->x() + m_horizontalScrollPos * 20 > m_value / 5 - 4 && event->x() + m_horizontalScrollPos * 20 <= m_value / 5 + 5)
         m_pressed = true;
+    else
+    {
+        int x = event->x();
+        if(x < 0)
+            x = 0;
+        if(x >= width())
+            x = width() - 1;
+        x += m_horizontalScrollPos * 20;
+        m_value = qRound((qreal)x * 5 / 100) * 100;
+        m_pressed = true;
+        update();
+        emit valueChanged(m_value);
+    }
 }
 
 void PlayHead::mouseMoveEvent(QMouseEvent *event)
@@ -78,8 +104,6 @@ void PlayHead::mouseMoveEvent(QMouseEvent *event)
             x = width() - 1;
         x += m_horizontalScrollPos * 20;
         m_value = qRound((qreal)x * 5 / 100) * 100;
-        if(m_value / 5 > width())
-            m_value -= 100;
         update();
         emit valueChanged(m_value);
     }
