@@ -20,3 +20,20 @@ Items Translation like Rotate
 ScrollArea for PropertyPanel
 
 Scene Zoom, Minimum size of 20x20 not needed anymore if zoom is implemented
+
+Selecting more than on item at a time
+
+Bugs
+----
+
+Id edit sets focus at the end of the name after each keyboard press
+
+Auto keyframe not working correctly for opacity
+
+Play/Pause button flickering at end of animation (both buttons are shown)
+
+Item copy does not copy keyframes
+
+Adjust keyframe opacity
+
+playhead click moves playhead
