@@ -4,3 +4,5 @@ Font of text objects is now editable
 News panel added
 Timeline is not limited anymore
 Item resizing while shift key pressed centers the item
+Playhead can now be repositioned clicking into the new position
+Playhead scale has now labels every half a second
